<resources>
    <string name="app_name">Processim Control</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="password2">Repeat password</string>
    <string name="connect">Connect</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="control_panel">Control panel</string>
    <string name="admin">Administration</string>
    <string name="manage_users">User management</string>
    <string name="delete_user">Delete user</string>
    <string name="chg_user_role">Change user role</string>
    <string name="users_list">List of users</string>
    <string name="user_id">User ID</string>
    <string name="chg_password">Change password</string>
    <string name="mod_profile">Modify profile</string>
    <string name="role">Role</string>
    <string name="modify">Modify</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="data">Data</string>
    <string name="ip">IP address</string>
    <string name="mac">MAC address</string>
    <string name="type">Type</string>
    <string name="state">State</string>
    <string name="up">UP</string>
    <string name="down">DOWN</string>
    <string name="actions">Actions</string>
    <string name="connect_to_plc">Connect to a PLC</string>
    <string name="rack">Rack</string>
    <string name="slot">Slot</string>
    <string name="datablock">Datablock</string>
    <string name="plc">PLC</string>
    <string name="add_plc">Add a PLC</string>
    <string name="plc_list">PLC list</string>
    <string name="manage_plc">PLC management</string>
    <string name="old_password">Old password</string>
    <string name="user_disconnect">Disconnect</string>
    <string name="read">READ</string>
    <string name="write">WRITE</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
</resources>