<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/addPlc_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal"
        android:digits="0123456789."
        android:hint="@string/ip"
        />

    <EditText
        android:id="@+id/addPlc_rack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rack"
        android:inputType="numberDecimal"
        />

    <EditText
        android:id="@+id/addPlc_slot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/slot"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/addPlc_datablock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/datablock"
        android:inputType="numberDecimal"/>

    <Spinner
        android:id="@+id/addPlc_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/type">
    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addPlc_accept"
            android:text="@string/add_plc"
            android:onClick="onFormClickManager" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addPlc_cancel"
            android:text="@string/cancel"
            android:onClick="onFormClickManager"/>
    </LinearLayout>
</LinearLayout>