<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/block_width"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    >

    <EditText
        android:id="@+id/mod_profile_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        />

    <EditText
        android:id="@+id/mod_profile_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:hint="@string/last_name"
        />

    <EditText
        android:id="@+id/mod_profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/accept_mod_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onFormClickManager"
            android:text="@string/accept"/>

        <Button
            android:id="@+id/cancel_mod_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onFormClickManager"
            android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>