<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/block_width"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/old_password"
        android:id="@+id/chg_password_old"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/chg_password_new"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password2"
        android:id="@+id/chg_password_new2"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onFormClickManager"
            android:text="@string/accept"
            android:id="@+id/accept_chg_password"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onFormClickManager"
            android:text="@string/cancel"
            android:id="@+id/cancel_chg_password"/>

    </LinearLayout>
</LinearLayout>