<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="user" type="be.heh.std.model.database.User"/>
    </data>
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WelcomeActivity"
        android:background="@drawable/gradient_1"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:id="@+id/welcome_layout">


        <LinearLayout
            android:layout_width="@dimen/block_width"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white_tran"
            android:padding="20dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/user_greetings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="@dimen/title_size"
                android:textStyle="bold"
                android:text="@{user.firstname}"
                />
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_infos"
                >

                <TableRow>
                    <TextView
                        android:text="@string/first_name"/>
                    <TextView
                        android:text="@{user.firstname}"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/last_name"/>
                    <TextView
                        android:text="@{user.lastname}"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/email"/>
                    <TextView
                        android:text="@{user.email}"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/role"/>
                    <TextView
                        android:text="@{user.role.name()}"/>
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <Button
                    android:id="@+id/modify_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modify"
                    android:onClick="onWelcomeClickManager"/>

                <Button
                    android:id="@+id/chg_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chg_password"
                    android:onClick="onWelcomeClickManager"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_disconnect"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:id="@+id/user_disconnect"
                    android:onClick="onWelcomeClickManager"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/block_width"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white_tran"
            android:padding="20dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actions"
                android:textSize="@dimen/title_size"/>

            <Button
                android:id="@+id/user_management"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manage_users"
                android:onClick="onWelcomeClickManager"
                android:visibility="gone"/>

            <Button
                android:id="@+id/connect_to_plc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_to_plc"
                android:onClick="onWelcomeClickManager"/>
        </LinearLayout>

    </LinearLayout>
</layout>