<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="330dp"
android:layout_height="wrap_content"
android:gravity="center"
android:orientation="vertical"
>


    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/login_password"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/login_connect"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:onClick="onFormClickManager"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/to_register"
        style="@style/Widget.AppCompat.ActionButton"
        android:onClick="onFormClickManager"/>

</LinearLayout>