<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    tools:ignore="MissingClass"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="100dp"
        android:textSize="25dp"
        />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/login_error"
            android:textColor="@color/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/login_password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/login_connect"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_form"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/register_error"
            android:textColor="@color/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <EditText
            android:id="@+id/register_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname"
            android:inputType="text"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/register_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            android:inputType="text"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/register_password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/register_password2"
            android:hint="@string/password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/register_connect"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

</LinearLayout>